Largely working with some linker failures.

--- a/test/cpp/lite_interpreter_runtime/CMakeLists.txt
+++ b/test/cpp/lite_interpreter_runtime/CMakeLists.txt
@@ -7,10 +7,16 @@ set(LITE_INTERPRETER_RUNTIME_TEST_DIR
   ${TORCH_ROOT}/test/cpp/lite_interpreter_runtime/test_mobile_profiler.cpp
 )
 
+if(QNX)
+add_library(backend_with_compiler_runtime SHARED
+        ${TORCH_ROOT}/test/cpp/jit/test_backend_compiler_lib.cpp
+        )
+else()
 add_library(backend_with_compiler_runtime SHARED
         ${TORCH_ROOT}/test/cpp/jit/test_backend_compiler_lib.cpp
         ${TORCH_ROOT}/torch/csrc/jit/backends/backend_interface.cpp
         )
+endif()
 target_link_libraries(backend_with_compiler_runtime PRIVATE torch)
 
 add_executable(
